--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* navbar ------------ */
@@ -21,6 +22,7 @@ nav div {
     display: flex;
     justify-content: center;
     flex: 1;
+    
 
 }
 
@@ -65,6 +67,12 @@ li, a {
 
 h1 {
     margin-bottom: 10px;
+    font-weight:bolder;
+}
+
+.header-title p {
+    font-size: 16px;
+    color: lightgray;
 }
 
 
@@ -102,6 +110,32 @@ h1 {
     margin-top: 10px;
 }
 
-
-
 /* header title -------- */
+
+.card-wrapper h2 {
+    margin-bottom: 50px;
+}
+
+.card-wrapper {
+    text-align: center;
+    margin-top: 50px;
+}
+
+.card-container{
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    color: grey;
+}
+
+.card img {
+    width: 200px;
+    height: 166px;
+    box-shadow: -1px 1px 10px 5px rgba(0, 0, 0, 0.28);
+    -webkit-box-shadow: -1px 1px 10px 5px rgba(0, 0, 0, 0.28);
+    -moz-box-shadow: -1px 1px 10px 5px rgba(0, 0, 0, 0.28);
+    margin-bottom: 10px;
+    border-radius: 5px;
+}
+
+
